# job-search-ai-assistant

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-python-env/: action.yml
.github/workflows/: quality_checks.yml  release.yaml
.hooks/: hooks-README.md
blog/: index.html
docs/: index.md  job_search_ai_assistant_prd.txt  modules.md
modules/: index.html
search/: search_index.json
src/job_search_ai_assistant/: __init__.py  assistant.py
src/job_search_ai_assistant/api/: __init__.py  config.py
src/job_search_ai_assistant/api/crud/: __init__.py
src/job_search_ai_assistant/api/routes/: __init__.py  health.py
src/job_search_ai_assistant/api/schemas/: __init__.py  health.py  search.py
src/job_search_ai_assistant/collectors/: __init__.py
src/job_search_ai_assistant/collectors/crawl4ai/: __init__.py  client.py  exceptions.py  extractors.py  models.py
tests/: conftest.py  test_foo.py
tests/job_search_ai_assistant/api/: test_app.py
tests/job_search_ai_assistant/api/routes/: test_health.py
tests/job_search_ai_assistant/api/schemas/: test_search.py
tests/job_search_ai_assistant/collectors/: test_collectors.py
tests/job_search_ai_assistant/collectors/crawl4ai/: test_client.py  test_exceptions.py  test_extractors.py  test_models.py
